# colav-simulator

./: README.md  pyproject.toml
colav_simulator/: scenario_config.py  scenario_generator.py
colav_simulator/common/: paths.py  vessel_data.py
colav_simulator/core/: controllers.py  models.py  ship.py
colav_simulator/schemas/: scenario.yaml
colav_simulator/viz/: visualizer.py
scenarios/: boknafjorden_generation_test.yaml  crossing_give_way.yaml  crossing_stand_on.yaml  head_on_sbmpc.yaml  overtaken.yaml  overtaking.yaml  planning_example.yaml  rl_scenario.yaml  rl_scenario_smaller.yaml  rlmpc_scenario.yaml  rlmpc_scenario_ms_channel.yaml  rlmpc_scenario_ms_channel_vimmjipda.yaml  simple_planning_example.yaml
scenarios/imazu_cases/: imazu01.yaml  imazu02.yaml  imazu03.yaml  imazu04.yaml  imazu05.yaml  imazu06.yaml  imazu07.yaml  imazu08.yaml  imazu09.yaml  imazu10.yaml  imazu11.yaml  imazu12.yaml  imazu13.yaml  imazu14.yaml  imazu15.yaml  imazu16.yaml  imazu17.yaml  imazu18.yaml  imazu19.yaml  imazu20.yaml  imazu21.yaml  imazu22.yaml
tests/: test_behavior_generator.py  test_gunnerus.py  test_scenario_config.py  test_ship.py  test_simulator.py  test_simulator_vimmjipda.py
